# mp2-lab2-matrix

./: CMakeLists.txt
Vector/: CMakeLists.txt  main.cpp
VectorLib/: CMakeLists.txt  Matrix.h  Vector.cpp  Vector.h
test/: CMakeLists.txt  test_tmatrix.cpp  test_tvector.cpp
